added changes to index and css

--- a/index.html
+++ b/index.html
@@ -13,10 +13,21 @@
 			<h4>Objective</h4>
 			<p>To take an entry level position as a software engineer.</p>
 			<h4>Experience</h4>
-			<p>Cook, Xi'an Famous Foods (2013 - Present)</p>
+			<p>Cook, Xi'an Famous Foods (05/2013 - Present)</p>
 			<ul>
-				<li></li>
-				<li></li>
+				<li>Prepare dishes according to specifications and to order in a timely and accurate fashion.</li>
+				<li>Cooked Spicy Cumin Lambs and other dishes in wok.</li>
+				<li>Trained new employees how to prepare dishes in an appropriate time.</li>
+				<li>Maintained the front and back kitchen clean and organized.</li>
+				<li>Manage inventory of the store.</li>
+			</ul>
+			
+			<p>Century 21 Sales Associate (10/2012 - 04/2013)</p>
+			<ul>
+				<li>Ensured that there will be no overage/shortage in the cash drawer and performed cash and credit/debit card transaction.</li>
+				<li>Greeted the guests and offered them gift cards, gift receipts and loyalty cards.</li>
+				<li>Cleaned-up and organized the merchandise into its own respective department.</li>
+				<li>Replenished the Accessories, Kids, Men's, Shoes and Women's Department.</li>
 			</ul>
 			<h4>Skills</h4>
 			<p>Proficient in HTML and CSS</p>
